--- a/buildsys.conf
+++ b/buildsys.conf
@@ -1,5 +1,5 @@
 fedora_release=13
-ojuba_release=4
+ojuba_release=4b1
 user=alsadi
 base_arch=`[ $(uname -p) != 'x86_64' ] && echo "i386" || echo "x86_64"`
 
