--- a/buildsys.conf
+++ b/buildsys.conf
@@ -1,5 +1,8 @@
+is_testing=1
 fedora_release=13
 ojuba_release=4b1
+oj=4
+oj_in_offline=1
 user=alsadi
 base_arch=`[ $(uname -p) != 'x86_64' ] && echo "i386" || echo "x86_64"`
 
