ojuba 5 beta release

--- a/buildsys.conf
+++ b/buildsys.conf
@@ -1,8 +1,8 @@
 is_testing=1
-fedora_release=13
-ojuba_release=4
-oj=4
-oj_in_offline=1
+fedora_release=15
+ojuba_release=5-b$(date +%Y%m%d)
+oj=5
+oj_in_offline=0
 user=alsadi
 base_arch=`[ $(uname -p) != 'x86_64' ] && echo "i386" || echo "x86_64"`
 
